<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.InsertDataFragment"
    android:id="@+id/insertFragmentContainer">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryAutoTvLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:hint="@string/category_prompt"
        app:hintEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/categoryAutoTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:completionThreshold="1"
            android:gravity="center"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/brandAndModelChoiceBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryAutoTvLayout"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brandAutoTvLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/brand_prompt"
            app:hintEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/brandAutoTv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:completionThreshold="1"
                android:gravity="center"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modelAutoTvLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/model_prompt"
            app:hintEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/modelAutoTv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:completionThreshold="1"
                android:gravity="center"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/countAndAccepterChoiceBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:weightSum="10"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandAndModelChoiceBar"
        app:layout_constraintVertical_bias="0.029">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acceptedNameLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_weight="8"
            android:hint="@string/sender_name_hint"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/acceptedNameIet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countOfComponentsLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:hint="@string/count"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countOfComponentsIet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="number"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="370dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countAndAccepterChoiceBar">

        <TextView
            android:id="@+id/dateOfSendHintTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/date_of_send"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/clickableDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textColor="@color/blue"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addComponentButton"
        style="@style/AddButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/oval_button"
        android:gravity="center"
        android:text="@string/add_in_base"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

</androidx.constraintlayout.widget.ConstraintLayout>